applicationdir		=	$(datadir)/2lgc
application_DATA	=	formules/1990_6_10.svg \
						formules/1990_6_10a.svg \
						formules/1990_6_10b.svg \
						xml/tooltips.xml

applicationuidir	=	$(datadir)/2lgc/ui
applicationui_DATA	=	ui/1990_gtk_actions.ui \
						ui/1990_gtk_groupes.ui \
						ui/1990_gtk_groupes_options.ui \
						ui/EF_gtk_noeud.ui

#imagesdir			=	$(datadir)/2lgc/images
#images_DATA			=	images/fleche_droite.xpm
