applicationdir		=	$(datadir)/2lgc
application_DATA	=	formules/1990_6_10.svg \
						formules/1990_6_10a.svg \
						formules/1990_6_10b.svg \
						xml/tooltips.xml

applicationuidir	=	$(datadir)/2lgc/ui
applicationui_DATA	=	ui/1990_gtk_actions.ui \
						ui/1990_gtk_groupes.ui \
						ui/1990_gtk_groupes_options.ui \
						ui/EF_gtk_barres.ui \
						ui/EF_gtk_barres_add.ui \
						ui/EF_gtk_noeud.ui \
						ui/EF_gtk_charge_barre_ponctuelle.ui \
						ui/EF_gtk_charge_barre_repartie_uniforme.ui \
						ui/EF_gtk_charge_noeud.ui
