applicationdir		=	$(datadir)/2lgc
application_DATA	=	formules/1990_6_10.svg \
						formules/1990_6_10a.svg \
						formules/1990_6_10b.svg \
						xml/tooltips.xml

applicationuidir	=	$(datadir)/2lgc/ui
applicationui_DATA	=	ui/1990_actions.ui \
						ui/1990_groupes.ui \
						ui/1990_groupes_options.ui \
						ui/EF_appuis.ui \
						ui/EF_barres.ui \
						ui/EF_sections.ui \
						ui/EF_sections_rectangulaire.ui \
						ui/EF_sections_T.ui \
						ui/EF_sections_carree.ui \
						ui/EF_barres_add.ui \
						ui/EF_noeud.ui \
						ui/EF_charge_barre_ponctuelle.ui \
						ui/EF_charge_barre_repartie_uniforme.ui \
						ui/EF_charge_noeud.ui
